--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@coreui/react": "^5.3.0",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
