--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "^3.0.1",
     "react-toastify": "^9.0.3",
     "redux": "5.0.1",
+    "redux-logger": "^3.0.6",
     "simplebar-react": "^3.2.5"
   },
   "devDependencies": {
